welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: illegal start of simple expression
var mess:String = litMessage()
^